cta buttons and footer change

--- a/_sass/_buttons.sass
+++ b/_sass/_buttons.sass
@@ -1,7 +1,8 @@
 .cta
-	background: $button-background
-	color: $button-text
-	// padding: 1.3rem 2rem
+	background: #D71117
+	color: #fff
+	border-radius: 5px
+	padding: 1.3rem 2rem
 	text-transform: capitalize
 	font-size: 2rem
 	font-weight: 300
