--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -1,7 +1,7 @@
 .navbar-andross
 	border-bottom: 2px solid $theme
 	border-radius: 0
-	min-height: 52px
+	min-height: 70px
 	background: #ffffff
 	width: 100%
 	overflow: hidden
@@ -44,12 +44,13 @@
 		color: $brand
 
 .cta
-	background: transparent
-	color: $button-text
+	background: #D71117
+	color: white
 	// padding: 1.3rem 2rem
 	text-transform: capitalize
 	font-size: 2rem
 	font-weight: 300
+	border-radius: 5px
 	&:hover
 		background: #eeeeee
 		color: $brand-dark
@@ -68,6 +69,9 @@
 
 .phone, .fa-phone
 	color: #fff
+
+.navbar-nav>li>a
+	margin-top: 10px
 
 .navbar
 	padding-right: 15px
