--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="container-fluid footer">
+<div class="container-fluid footer" style="background-image: url(/img/footer.jpg);">
 <div class="container footer">
 	    <div class="row footer-pad">
 	      {% comment %} if something is missing from the contact info it won't print extra columns {% endcomment %}
