--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -1,6 +1,5 @@
 .footer
-	background: darken($theme, .2)
-	color: $theme-text
+	color: $brand
 	padding: 2rem
 	text-align: center
 	font-size: 18px
